Ввели класс для проверки библиотеки аннотаций Используем библиотеку - lombok

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
+    provided 'org.projectlombok:lombok:1.12.2'
+
     compile project(':circleimageview')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
