Добавление анимации для переходов между активностями

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".EditActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AnimationActivity" />
+        <activity
+            android:name=".EditActivity"
+            android:theme="@style/AnimationActivity" />
     </application>
 
 </manifest>
